--- a/my_project/Dr_K/css/main.css
+++ b/my_project/Dr_K/css/main.css
@@ -9,6 +9,11 @@
   src: url("../../font/Noto_Sans_KR/NotoSansKR-Medium.otf");
   font-weight: 400;
 }
+@font-face {
+  font-family: "Mont";
+  src: url("../../font/Montserrat/Montserrat-Italic-VariableFont_wght.ttf");
+  font-weight: 600;
+}
 
 * {
   margin: 0;
@@ -81,12 +86,30 @@ body {
   font-size: 50px;
   padding: 20px;
 }
+.nav .nav-menu .nav-box1 ul li {
+  font-size: 16px;
+}
+
+.nav .nav-menu .nav-box1 ul li a i {
+  color: white;
+  transition: 0.2s;
+}
+.nav .nav-menu .nav-box1 > i {
+  display: none;
+  color: white;
+  text-shadow: 0px 0px 10px #000000;
+  padding: 20px;
+  translate: 0.2s;
+}
 .nav .nav-menu .nav-box2 {
   width: 100%;
   height: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.nav .nav-menu .nav-box2 ul li {
+  font-size: 20px;
 }
 .nav .nav-menu ul {
   list-style: none;
@@ -98,10 +121,6 @@ body {
   transition: 0.2s;
   color: white;
   text-shadow: 0px 0px 10px #000000;
-}
-.nav .nav-menu ul li a i {
-  color: white;
-  transition: 0.2s;
 }
 
 /* header slider*/
@@ -157,8 +176,117 @@ body {
 
 /* info */
 .info {
-  height: 30vh;
+  position: relative;
   margin-bottom: 10vw;
-  border-radius: 5vw;
-  background-color: aliceblue;
+  background-image: url(../img/bg9.jpg);
+  background-size: cover;
+  background-position: center;
+}
+.info .op-box {
+  padding: 10vw 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(255, 255, 255, 0.4);
+}
+.info .container {
+  text-align: right;
+}
+.info .text-box {
+  text-align: left;
+  width: 80%;
+  margin-bottom: 100px;
+}
+.info .text-box h2 {
+  font-family: "Mont";
+  font-size: 80px;
+  margin: 30px 0;
+  color: #333333;
+}
+.info .text-box p {
+  font-family: "Noto";
+  font-size: 30px;
+  margin: 30px 0;
+  color: #555555;
+}
+.info .img-box {
+  display: inline-block;
+  text-align: left;
+}
+
+.info .img-box .infoSwiper {
+  width: 70vw;
+  height: 20vw;
+}
+.info .img-box .infoSwiper .swiper-slide {
+  background-size: cover;
+  background-position: center;
+  border-radius: 15px;
+}
+.info .img-box .infoSwiper .s1 {
+  background-image: url(../img/analysis-4402809_1920.jpg);
+}
+.info .img-box .infoSwiper .s2 {
+  background-image: url(../img/approximately-3887443_1920.jpg);
+}
+.info .img-box .infoSwiper .s3 {
+  background-image: url(../img/laboratory-3827736_1920.jpg);
+}
+.info .img-box .infoSwiper .s4 {
+  background-image: url(../img/s2.jpg);
+}
+.info .img-box .infoSwiper .s5 {
+  background-image: url(../img/technology-4905258_1920.jpg);
+}
+.info .img-box .infoSwiper .s6 {
+  background-image: url(../img/covid-5288310_1920.jpg);
+}
+
+/* technology section */
+.tech {
+  background-image: url(../img/bg1.jpg);
+  background-size: cover;
+  background-position: center;
+}
+.tech .op-box {
+  width: 100%;
+  height: 100%;
+  padding: 10vw 0;
+  background-color: rgba(0, 0, 0, 0);
+}
+.tech h2 {
+  font-family: "Mont";
+  font-size: 60px;
+}
+
+@media (max-width: 600px) {
+  .nav .nav-menu .nav-box1 ul li {
+    display: none;
+  }
+  .nav .nav-menu .nav-box1 > i {
+    display: block;
+  }
+  .nav .nav-menu .nav-box2 ul li {
+    font-size: 16px;
+  }
+  .nav .nav-menu ul li {
+    padding: 10px;
+  }
+  .info .text-box h2 {
+    font-size: 60px;
+  }
+  .info .text-box p {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 400px) {
+  .nav .nav-menu .nav-box2 ul li {
+    font-size: 12px;
+  }
+  .info .text-box h2 {
+    font-size: 35px;
+  }
+  .info .text-box p {
+    font-size: 15px;
+  }
 }
