--- a/my_project/kkh/css/data_structure.css
+++ b/my_project/kkh/css/data_structure.css
@@ -1,19 +1,17 @@
 .big {
   position: relative;
-  width: 100%;
 }
 
 .sidebar {
   position: fixed;
-  width: 25%;
+  width: 200px;
   height: 100vh;
   border-right: 1px solid #dddddd;
 }
 
 .main-box {
   position: absolute;
-  right: 0;
-  width: 70%;
+  left: 250px;
 }
 .big-sc h2 {
   font-size: 45px;
@@ -38,4 +36,13 @@
 .space-box {
   width: 100%;
   height: 200px;
+}
+
+@media (max-width: 600px) {
+  .mySidebar {
+    display: none;
+  }
+  .main-box {
+    left: 20px;
+  }
 }
